--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "vimjs",
+  "name": "vim-bmo",
   "version": "1.0.0",
   "description": "",
   "bin": {
-    "vimjs": "./bin/vimjs.js"
+    "vimjs": "./bin/vim-bmo.js"
   },
   "main": "index.js",
   "scripts": {
-    "test": "jest ./src ./test --watch"
+    "test": "node scripts/test.js",
+    "start": "gulp start",
+    "build": "gulp build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.5.1",
     "get-port": "^5.0.0",
+    "uuid": "^3.3.2",
     "yargs": "^13.2.4"
   },
   "devDependencies": {
@@ -22,6 +25,7 @@
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/preset-env": "^7.4.5",
     "babel-jest": "^24.8.0",
+    "command-exists": "^1.2.8",
     "execa": "^2.0.3",
     "exit-hook": "^2.2.0",
     "fancy-log": "^1.3.3",
